// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should render the component with header 1`] = `
<div>
  <div
    class="accordion "
  >
    <div
      class="accordion-header"
    >
      <span
        class="accordion-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8L22 16 12 24z"
          />
        </svg>
      </span>
      <span>
        Test Header
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion should toggle content when header is clicked 1`] = `
<div>
  <div
    class="accordion "
  >
    <div
      class="accordion-header"
    >
      <span
        class="accordion-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 12L16 22 8 12z"
          />
        </svg>
      </span>
      <span>
        Test Header
      </span>
    </div>
    <div
      class="accordion-content"
    >
      <div>
        Test Content
      </div>
    </div>
  </div>
</div>
`;
